--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,5 @@ body {
 /* container */
 
 .customContainer {
-  @apply max-w-screen-2xl mx-auto px-5 lg:px-0;
+  @apply max-w-screen-xl mx-auto px-5 lg:px-0;
 }
